# WordListsForHacking

./: .env.sample  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.pt-BR.md  SECURITY.md  default-creds-combo.lst  labs_passwords.lst  pyproject.toml  requirements.txt  setup_venv.ps1  setup_venv.sh  update_wordlists.py  username_br.lst  wfh.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml
data/: behavior_patterns.json  corp_prefix_patterns.json  default_credentials.json  pharma_br.py  seclists_corpus.json
fuzzing/: discovery_br.lst
labs/: labs_mikrotik_pass.lst
passwords/: default-creds-combo.lst
scripts/: publish-pypi.ps1  publish-pypi.sh
usernames/: username_br.lst
wfh_modules/: analyzer.py  benchmark_suite.py  charset_gen.py  combiner.py  compute_backend.py  corp_prefixes.py  corp_profiler.py  default_creds.py  dns_wordlist.py  domain_users.py  file_extractor.py  hw_profiler.py  isp_keygen.py  kwalk_gen.py  leet_permuter.py  linkedin_search.py  mangler.py  markov_engine.py  merger.py  ml_patterns.py  ocr_extractor.py  password_dna.py  pattern_engine.py  pcfg_engine.py  phone_gen.py  prince_engine.py  profiler.py  rulegen_engine.py  sanitizer.py  seclists_trainer.py  thread_pool.py  web_scraper.py  xor_crypto.py
wfh_modules/data/: __init__.py  behavior_patterns.json
